--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { workspace = true }
-tokio = { workspace = true }
-ort = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-anyhow = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-tower = { workspace = true }
-tower-http = { workspace = true }
+axum = "0.7"
+tokio = { version = "1.0", features = ["full"] }
+ort = "1.16"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+tower = "0.4"
+tower-http = { version = "0.5", features = ["cors"] }
+ndarray = "0.15"
