--- a/rust-api/Dockerfile
+++ b/rust-api/Dockerfile
@@ -12,12 +12,13 @@ RUN apt-get update && apt-get install -y \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
-# Install ONNX Runtime - simpler approach
+# Install ONNX Runtime with correct symlinks
 RUN wget -q https://github.com/microsoft/onnxruntime/releases/download/v1.16.3/onnxruntime-linux-x64-1.16.3.tgz \
     && tar -xzf onnxruntime-linux-x64-1.16.3.tgz \
-    && ls -la onnxruntime-linux-x64-1.16.3/ \
-    && find onnxruntime-linux-x64-1.16.3 -name "*.so*" \
-    && cp -r onnxruntime-linux-x64-1.16.3/lib/* /usr/local/lib/ 2>/dev/null || true \
+    && cp onnxruntime-linux-x64-1.16.3/lib/* /usr/lib/ \
+    && ln -sf /usr/lib/libonnxruntime.so.1.16.3 /usr/lib/libonnxruntime.so.1.16.0 \
+    && ln -sf /usr/lib/libonnxruntime.so.1.16.3 /usr/lib/libonnxruntime.so.1 \
+    && ln -sf /usr/lib/libonnxruntime.so.1.16.3 /usr/lib/libonnxruntime.so \
     && ldconfig \
     && rm -rf onnxruntime-*
 
